# hoard

./: Cargo.toml  README.md
src/: cli_commands.rs  config.rs  hoard.rs  main.rs  util.rs
src/cfg/: mod.rs
src/core/: mod.rs  trove.rs
src/data/: models.rs  storage.rs
src/gui/: commands_gui.rs  event.rs  merge.rs  mod.rs  prompts.rs  theme.rs
src/gui/inline_edit/: controls.rs
src/gui/list_search/: controls.rs  render.rs
src/gui/new_command/: render.rs
src/gui/parameter_input/: render.rs
src/tui/: colorschemes.rs  event_loop.rs  mod.rs
src/tui/activities/: add_new_command.rs  command_browser.rs  keybind_help.rs  mod.rs
src/ui/: mod.rs
src/ui/search/: controls.rs  render.rs
