[package]
name = "hoard-rs"
version = "2.0.0"
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["Denis Heid"]
description = "hoard - cli command organizer written in Rust"
homepage = "https://hyde46.github.io/hoard/"
repository = "https://github.com/Hyde46/hoard"

[package.metadata.deb]
maintainer = "Denis Heid"
copyright = "2022, Denis Heid"
license-file = ["LICENSE"]
depends = "$auto"
section = "utility"

[package.metadata.rpm]
package = "hoard"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[[bin]]
name = "vihoard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.87"
array_tool = "1.0.3"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
console = "0.15.8"
crossbeam-channel = "0.5.13"
dialoguer = "0.11.0"
dirs = "5.0.1"
dotenv = "0.15.0"
enum-iterator = "2.1.0"
eyre = "0.6.12"
h2 = "0.4.6"
log = "0.4.22"
prettytable-rs = "0.10.0"
rand = { version = "0.8.5", features = ["std"] }
ratatui = { version = "0.28.1", features = ["termion"] }
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
serde_yaml = "0.9.34"
simple_logger = "5.0.0"
termion = "4.0.2"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.3.0"
